# ab-helpers

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  api.js  apply-kia-interest.js  apply-mortgage-interest.js  compose.yaml  index-cron.js  package-lock.json  package.json  utils.js
.cargo/: audit.toml
crates/ab-helpers-cli/: Cargo.toml
crates/ab-helpers-cli/src/: main.rs
crates/ab-helpers-cli/src/commands/: apply_kia_interest.rs  apply_mortgage_interest.rs  daemon.rs  error.rs  init.rs  interest.rs  mod.rs  set_balance.rs
crates/ab-helpers-domain/: Cargo.toml
crates/ab-helpers-domain/src/db/: error.rs  mod.rs
crates/ab-helpers-domain/src/models/: interest.rs  mod.rs  money.rs  reconcile.rs
crates/ab-helpers-domain/src/models/tests/: interest.rs  mod.rs  money.rs
crates/ab-helpers-server/: Cargo.toml
crates/ab-helpers-server/configuration/: base.toml  config.example.toml  local.toml  test.toml
crates/ab-helpers-server/src/: config.rs  error.rs  execution.rs  lib.rs  main.rs  startup.rs  telemetry.rs
crates/ab-helpers-server/src/routes/api/: mod.rs
crates/ab-helpers-server/src/services/: mod.rs  testutils.rs
crates/ab-helpers-server/src/services/actual/: interest.rs  mod.rs  reconcile.rs
crates/ab-helpers-server/src/services/actual/tests/: interest.rs
crates/actual/: Cargo.toml
crates/actual/bridge/: index.js  package-lock.json  package.json
crates/actual/src/: bridge.rs  client.rs  error.rs  lib.rs  types.rs
crates/budgetize-cli/: Cargo.toml
crates/budgetize-cli/src/: main.rs
crates/budgetize-domain/: Cargo.toml
crates/budgetize-domain/src/: lib.rs
crates/budgetize-domain/src/models/: actual.rs  mod.rs
crates/budgetize-server/: Cargo.toml
crates/budgetize-server/configuration/: production.toml  staging.toml
crates/budgetize-server/src/: config.rs  error.rs  main.rs  startup.rs  telemetry.rs
crates/budgetize-server/src/services/: testutils.rs
crates/budgetize-server/src/services/actual/: reconcile.rs
crates/db-postgres/: Cargo.toml
crates/db-postgres/src/: lib.rs
crates/db-redis/: Cargo.toml
crates/db-redis/src/: lib.rs
docs/: logging.md  plan-execute-pattern.md
docs/superpowers/plans/: 2026-05-06-ab-helpers-consolidation.md
docs/superpowers/specs/: 2026-05-06-ab-helpers-consolidation-design.md
scripts/: init_db.sh
