[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
rust-version = "1.94"
authors = ["Jeremy Dube <jeremy.dube.dev@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2024"

[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much.
debug = 0

[profile.release]
incremental = true
# Set this to 1 or 2 to get more useful backtraces in debugger.
debug = 0

[workspace.dependencies]
# Local Crates
ab-helpers-domain = { path = "./crates/ab-helpers-domain" }
ab-helpers-server = { path = "./crates/ab-helpers-server" }
db-postgres = { path = "./crates/db-postgres" }
db-redis = { path = "./crates/db-redis" }
actual = { path = "./crates/actual" }

# Non-Local Crates
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "macros", "uuid", "chrono", "migrate", "json"] }
fred = { version = "9" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
chrono-tz = { version = "0.10", features = ["serde"] }
anyhow = { version = "1", features = ["backtrace"] }
thiserror = "2"
uuid = { version = "1", features = ["serde", "v4"] }
async-trait = "0.1"
tracing = "0.1"
futures = "0.3"
itertools = "0.13"
tokio-cron-scheduler = "0.13"
cron = "0.12"
