[package]
name = "ab-helpers-domain"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[features]
default = []
testutils = ["dep:mockall", "dep:fake", "dep:rand"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
fred.workspace = true

mockall = { version = "^0.14", optional = true }
fake = { version = "^5", optional = true, features = ["chrono", "derive", "uuid"] }
rand = { version = "^0.10", optional = true }

[dev-dependencies]
mockall = { version = "0.13" }
fake = { version = "^5", features = ["chrono", "derive", "uuid"] }
rand = { version = "^0.10" }
