[package]
name = "ab-helpers-domain"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[features]
default = []
testutils = ["dep:mockall", "dep:fake", "dep:rand"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
fred.workspace = true

mockall = { workspace = true, optional = true }
fake = { workspace = true, optional = true }
rand = { workspace = true, optional = true }

[dev-dependencies]
mockall = { workspace = true }
fake = { workspace = true }
rand = { workspace = true }
