[package]
name = "ab-helpers-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"
doctest = false

[[bin]]
name = "ab-helpers-server"
path = "src/main.rs"

[dependencies]
ab-helpers-domain.workspace = true
db-postgres.workspace = true
db-redis.workspace = true
actual.workspace = true

axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["query", "form"] }
tower = "0.5"
tower-request-id = "0.3"
tower-http = { version = "0.6", features = ["trace", "cors", "fs"] }
http = "1"

tokio.workspace = true
futures.workspace = true
async-trait.workspace = true

serde.workspace = true
serde_json.workspace = true
chrono.workspace = true

config = { version = "0.14", features = ["toml"], default-features = false }

anyhow.workspace = true
thiserror.workspace = true

tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
tracing-log = "0.2"

uuid.workspace = true
secrecy = { version = "0.8", features = ["serde"] }
sqlx = { workspace = true, features = ["postgres"] }

[dev-dependencies]
ab-helpers-domain = { workspace = true, features = ["testutils"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }
wiremock = "0.6"
once_cell = "1"
sqlx = { workspace = true, features = ["postgres"] }
