[package]
name = "actual"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[features]
default = []
testutils = ["dep:mockall"]

[dependencies]
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["process", "io-util", "macros", "rt"] }
tracing.workspace = true

ab-helpers-domain.workspace = true

mockall = { version = "0.13", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "process"] }
