[package]
name = "actual"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[features]
default = []
testutils = ["dep:mockall", "dep:fake", "dep:rand"]

[dependencies]
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["process", "io-util", "macros", "rt"] }
tracing.workspace = true
secrecy = { workspace = true }

mockall = { workspace = true, optional = true }
fake = { workspace = true, optional = true }
rand = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "process"] }
mockall = { workspace = true }
fake = { workspace = true }
rand = { workspace = true }
