[package]
name = "budgetize-cli"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "budgetize-cli"
path = "src/main.rs"

[dependencies]
# Local
budgetize-domain.workspace = true
budgetize-server.workspace = true
actual.workspace = true

# CLI / runtime
anyhow.workspace = true
tokio.workspace = true
clap = { version = "4", features = ["derive"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
