[package]
name = "budgetize-server"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"
doctest = false

[[bin]]
name = "budgetize-server"
path = "src/main.rs"

[dependencies]
# Local Deps
budgetize-domain.workspace = true
db-postgres.workspace = true
db-redis.workspace = true
actual.workspace = true

# Web Framework
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["query", "form"] }
tower = "0.5"
tower-request-id = "0.3"
tower-http = { version = "0.6", features = ["trace", "cors", "fs"] }
http = "1"

# Async
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Config
config = { version = "0.14", features = ["toml"], default-features = false }

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
tracing-log = "0.2"

# Types
uuid.workspace = true
chrono.workspace = true

# Security
secrecy = { version = "0.8", features = ["serde"] }
sqlx = { workspace = true, features = ["postgres"] }

[dev-dependencies]
budgetize-domain = { workspace = true, features = ["testutils"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }
wiremock = "0.6"
once_cell = "1"
sqlx = { workspace = true, features = ["postgres"] }
