[package]
name = "db-postgres"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
ab-helpers-domain.workspace = true
sqlx = { workspace = true, features = ["postgres"] }
tracing.workspace = true
async-trait.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
