[package]
name = "db-redis"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
ab-helpers-domain.workspace = true
fred.workspace = true
tracing.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
